--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,3 +4,6 @@ INCLUDE_DIRECTORIES(../src/)
 ADD_EXECUTABLE(ts_main ts_main.cpp)
 TARGET_LINK_LIBRARIES(ts_main xd)
 
+ADD_EXECUTABLE(ts_log ts_log.cpp)
+TARGET_LINK_LIBRARIES(ts_log xd)
+
