+ 添加条件变量及测试

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,18 @@
 FILE(GLOB_RECURSE CURRENT_HEADERS *.h *.cpp)
 
+SET(BASE_SOURCE mutex.cpp
+                )
+IF(UNIX)
+    MESSAGE("UNIX")
+    SET(BASE_SOURCE ${BASE_SOURCE} 
+                    mutex_linux.cpp
+                    condition_linux.cpp)
+ELSEIF(APPLE)
+    MESSAGE("APPLE")
+ELSEIF(WIN32)
+    MESSAGE("WIN32")
+ENDIF()
+
 SET(ALL_SOURCE ${CURRENT_HEADERS})
 ADD_LIBRARY(xd ${ALL_SOURCE})
 TARGET_LINK_LIBRARIES(xd pthread)
