--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,3 +22,6 @@ TARGET_LINK_LIBRARIES(ts_sema xd)
 ADD_EXECUTABLE(ts_timer ts_timer.cpp)
 TARGET_LINK_LIBRARIES(ts_timer xd)
 
+ADD_EXECUTABLE(ts_thread ts_thread.cpp)
+TARGET_LINK_LIBRARIES(ts_thread xd)
+
