+ 添加文件句柄的实现并测试

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,8 @@ IF(UNIX)
                     sema_linux.cpp
                     timer_linux.cpp
                     thread_linux.cpp
-                    event_linux.cpp)
+                    event_linux.cpp
+                    file_linux.cpp)
 ELSEIF(APPLE)
     MESSAGE("APPLE")
 ELSEIF(WIN32)
