* rename referenceCount.{h,cpp} ==> reference_count.{h,cpp} <br> +添加线程组管理

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,9 @@
 FILE(GLOB_RECURSE CURRENT_HEADERS *.h *.cpp)
 
 SET(BASE_SOURCE mutex.cpp
-                referenceCount.cpp
-                thread.cpp)
+                reference_count.cpp
+                thread.cpp
+                thread_group.cpp)
 IF(UNIX)
     MESSAGE("UNIX")
     SET(BASE_SOURCE ${BASE_SOURCE} 
