+ 添加文件的实现

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/build/lib/")
 SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -O0 -g")
 SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -g")
 SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O0 -g")
+ADD_DEFINITIONS(-D_GNU_SOURCE)
 
 # 添加库目录
 ADD_SUBDIRECTORY(src)
