+ 添加智能指针(使用引用计数原理)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,8 @@ SET(BASE_SOURCE mutex.cpp
                 thread.cpp
                 event.cpp
                 thread_group.cpp
-                log.cpp)
+                log.cpp
+                shareable.cpp)
 IF(UNIX)
     MESSAGE("UNIX")
     SET(BASE_SOURCE ${BASE_SOURCE} 
