* 修改回调方式 使用c++0x中std::function和std::bind

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,5 +34,6 @@ ELSEIF(WIN32)
 ENDIF()
 
 SET(ALL_SOURCE ${BASE_SOURCE})
+#SET(ALL_SOURCE ${CURRENT_HEADERS})
 ADD_LIBRARY(xd ${ALL_SOURCE})
 TARGET_LINK_LIBRARIES(xd pthread)
