--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,9 @@ SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/build/bin/")
 # 设置静态库目录
 SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/build/lib/")
 # 设置编译条件
-SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -O0 -std=c++11 -g")
-SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -std=c++11 -g")
-SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O0 -std=c++11 -g")
+SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -O0 -std=c++0x -g")
+SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -std=c++0x -g")
+SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O0 -std=c++0x -g")
 ADD_DEFINITIONS(-D_GNU_SOURCE)
 
 # 添加库目录
